@@ -27,6 +27,7 @@
 #include <gnome.h>
 
 void gnc_druid_set_title_image (GnomeDruid *druid, char *image_path);
+void gnc_druid_set_logo_image (GnomeDruid *druid, char *image_path);
 void gnc_druid_set_watermark_image (GnomeDruid *druid, char *image_path);
 
 void gnc_druid_set_colors (GnomeDruid *druid);
